force-app/main/default/objects/RTL_Campaign_CallList_Search_Cache__c/RTL_Campaign_CallList_Search_Cache__c.object-meta.xml
<CustomObject>
    <label>Campaign CallList Search Cache</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign CallList Search Cache  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign CallList Search Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>