force-app/main/default/objects/RTL_Campaign_CallList_Search_Cache__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign CallList Search Caches</relationshipLabel>
    <relationshipName>Campaign_CallList_Search_Caches</relationshipName>
    <type>Lookup</type>
</CustomField>