force-app/main/default/objects/RTL_Campaign_CallList_Search_Cache__c/fields/RTL_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>