force-app/main/default/objects/RTL_Campaign_CallList_Search_Cache__c/fields/RTL_Offer_Result__c.field-meta.xml
<CustomField>
    <fullName>RTL_Offer_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Result</label>
    <length>200</length>
    <type>Text</type>
</CustomField>