force-app/main/default/objects/RTL_Campaign_CallList_Search_Cache__c/fields/RTL_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_CallList_Search_Caches</relationshipName>
    <type>Lookup</type>
</CustomField>